# 3dprinting

./: CE3S1_hello_text.gcode  CE3S1_hello_text_with_spike.gcode  LICENSE  README.md  hello_text.stl  hello_text_with_spike.stl  pyproject.toml  text_to_stl.py  text_to_stl_with_spike.py
